test_suite/alan-2022-examples/failing/000400_mutation.alan
source WIQCa begin / "4P" end
